--- a/package.json
+++ b/package.json
@@ -2,20 +2,46 @@
   "name": "deliveryapp",
   "version": "0.1.0",
   "private": true,
+  "main": "main.js",
   "dependencies": {
+    "@googlemaps/google-maps-services-js": "^3.1.15",
+    "@iconify/icons-mdi": "^1.1.2",
+    "@iconify/react": "^1.1.3",
+    "@material-ui/core": "^4.11.2",
+    "@react-google-maps/api": "^2.0.2",
     "@testing-library/jest-dom": "^5.11.6",
     "@testing-library/react": "^11.2.2",
     "@testing-library/user-event": "^12.6.0",
+    "axios": "^0.21.1",
+    "bootstrap": "^4.5.3",
+    "concurrently": "^5.3.0",
+    "cors": "^2.8.5",
+    "cross-env": "^7.0.3",
+    "dotenv": "^8.2.0",
+    "electron-builder": "^22.9.1",
+    "electron-is-dev": "^1.2.0",
+    "electron-unhandled": "^3.0.2",
+    "express": "^4.17.1",
+    "google-map-react": "^2.1.9",
+    "google-maps-react": "^2.0.6",
+    "jquery": "^3.5.1",
+    "material-table": "^1.69.2",
+    "mongoose": "^5.11.8",
+    "nodemon": "^2.0.6",
+    "python-shell": "^2.0.3",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
+    "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.1",
+    "wait-on": "^5.2.1",
     "web-vitals": "^0.2.4"
   },
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "electron": "concurrently \"cross-env BROWSER=none react-scripts start\" \"wait-on http://localhost:3000 && electron .\""
   },
   "eslintConfig": {
     "extends": [
@@ -34,5 +60,9 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "electron": "^11.1.0",
+    "electron-packager": "^15.2.0"
   }
 }
